--- a/index.html
+++ b/index.html
@@ -14,38 +14,34 @@
 </head>
 
 <body>
-    <header>
-        <img src="images/banner.png" alt="company logo" width="700" height="200">
-    </header>
-    <nav>
-        <img src="images/logo.png" alt="company logo" width="150" height="100">
-        about.html 
-        Our Team   
-        Specials   
-        Training  
-        Media   
-        FAQs  
-        Contact Us  
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="team.html">Out Team</a></li>
-            <li><a href="specials.html">Specials</a></li>
-            <li><a href="training.html">Training</a></li>
-            <li><a href="media.html">Media</a></li>
-            <li><a href="faqs.html">FAQs</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
-        </ul>
-    </nav>
-
-    <main>
-        <h2>Welcome to Shrestha Choppers</h2>
-    </main>
-    <footer>
-        <p>&copy; 2024. All Rights Reserved.</p>
-        <p><a href="mailto:info@shresthachoppers.com">Request information</a></p>
-        <p>Arbin Shrestha, c0932096</p>
-    </footer>
+    <div class="container">
+        <header>
+            <img src="images/banner.png" alt="company logo" width="700" height="200">
+        </header>
+        <nav>
+            <img src="images/logo.png" alt="company logo" width="150" height="100">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="team.html">Out Team</a></li>
+                <li><a href="specials.html">Specials</a></li>
+                <li><a href="training.html">Training</a></li>
+                <li><a href="media.html">Media</a></li>
+                <li><a href="faqs.html">FAQs</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+        </nav>
+    
+        <main>
+            <h2>Welcome to Shrestha Choppers</h2>
+        </main>
+        <footer>
+            <p>&copy; 2024. All Rights Reserved.</p>
+            <p><a href="mailto:info@shresthachoppers.com">Request information</a></p>
+            <p>Arbin Shrestha, c0932096</p>
+        </footer>
+    </div>
+    
 
 
 </body>
