--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>c0932096</title>
-    <link href="css/styles.css" rel="stylesheet/css" />
+    <link rel="stylesheet" href="css/styles.css" />
 </head>
 
 <body>
