--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>c0932096</title>
+    <title>🍴 Shrestha Processors | Food Processors</title>
     <link rel="stylesheet" href="css/styles.css" />
 </head>
 
