--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
             <h2>Welcome to Shrestha Choppers</h2>
         </main>
         <footer>
-            <p>&copy; 2024. All Rights Reserved.</p>
-            <p><a href="mailto:info@shresthachoppers.com">Request information</a></p>
-            <p>Arbin Shrestha, c0932096</p>
+            <p>&copy; Copyright 2024. &copy;All Rights Reserved.</p>
+            <p>Request information<a href="mailto:info@shresthachoppers.com">info@shresthachoppers.com</a></p>
+            <p>Arbin Shrestha, Student number: c0932096</p>
         </footer>
     </div>
     
