--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </main>
         <footer>
             <p>&copy; Copyright 2024. &copy;All Rights Reserved.</p>
-            <p>Request information<a href="mailto:info@shresthachoppers.com">info@shresthachoppers.com</a></p>
+            <p><a href="mailto:info@shresthachoppers.com">Request information</a></p>
             <p>Arbin Shrestha, Student number: c0932096</p>
         </footer>
     </div>
