--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="team.html">Out Team</a></li>
+                <li><a href="team.html">Our Team</a></li>
                 <li><a href="specials.html">Specials</a></li>
                 <li><a href="training.html">Training</a></li>
                 <li><a href="media.html">Media</a></li>
