--- a/specials.html
+++ b/specials.html
@@ -29,17 +29,17 @@
 
         <main>
             <h2>Specials</h2>
-            <img src="banner.png" alt="banner image" />
+            <img src="./images/banner.png" alt="banner image" />
 
             <h3>Product of the week</h3>
-            <img src="product1.jpg" alt="Product one image" />
+            <img src="./images/product1.jpg" alt="Product one image" />
 
             <h3>Weekly sales</h3>
-            <img src="product1.jpg" alt="Product one image" />
+            <img src="./images/product1.jpg" alt="Product one image" />
 
             <h2><strong>Slice, dice, or blend, our food processors promise precision and perfection every time</strong>
             </h2>
-            <img src="guaranteed.jpeg" alt="Product one image" />
+            <img src="./images/guaranteed.jpeg" alt="Product one image" />
 
             <div>
                 <div>Unmatched quality</div>
