--- a/training.html
+++ b/training.html
@@ -11,6 +11,7 @@
          <title>Training | Food Processors</title>
          <link rel="stylesheet" href="css/styles.css" />
          <link rel="stylesheet" href="css/training.css" />
+         <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
      </head>
  
      <body>
