--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
 		<title>About us | Food Processors</title>
 		<link rel="stylesheet" href="css/styles.css" />
 		<link rel="stylesheet" href="css/about.css" />
+		<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 	</head>
 
 	<body>
