--- a/team.html
+++ b/team.html
@@ -11,6 +11,7 @@
 		<title>Our Team | Food Processors</title>
 		<link rel="stylesheet" href="css/styles.css" />
 		<link rel="stylesheet" href="css/team.css" />
+		<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 	</head>
 
 	<body>
