changed style for about and teams page

--- a/about.html
+++ b/about.html
@@ -1,77 +1,93 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>About us | Food Processors</title>
-		<link rel="stylesheet" href="css/styles.css" />
-		<link rel="stylesheet" href="css/about.css" />
-		<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
-	</head>
+<!-- 
+    Student name: Arbin Shrestha
+    Student number: c0932096
+ -->
 
-	<body>
-		<div class="container">
-			<header>
-				<img
-					src="images/banner.png"
-					class="banner-image"
-					alt="company banner"
-				/>
-			</header>
-			<nav>
-				<a href="index.html"
-					><img
-						src="images/newlogo.png"
-						alt="company logo"
-						class="logo"
-				/></a>
-				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="about.html">About</a></li>
-					<li><a href="team.html">Our Team</a></li>
-					<li><a href="specials.html">Specials</a></li>
-					<li><a href="training.html">Training</a></li>
-					<li><a href="media.html">Media</a></li>
-					<li><a href="faqs.html">FAQs</a></li>
-					<li><a href="contact.html">Contact Us</a></li>
-				</ul>
-			</nav>
+ <!DOCTYPE html>
+ <html lang="en">
+ 
+ <head>
+	 <meta charset="UTF-8">
+	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	 <title>About us | Food Processors</title>
+	 <link rel="stylesheet" href="css/styles.css" />
+	 <link rel="stylesheet" href="css/about.css" />
+	 <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+ </head>
+ 
+ <body>
+	 <div>
+		 <header>
+			 <!-- taken from: for study purpose only -->
+			 <!-- https://images.app.goo.gl/ug5MfrmM4KJzjK2s7 -->
+			 <img
+				 src="images/banner.jpg"
+				 class="banner-image"
+				 alt="company banner"
+			 />
+		 </header>
+		 
+		 <nav>
+			 <img
+						 src="images/logo.png"
+						 alt="company logo"
+						 class="logo"
+				 />
+			 <ul>
+				 <li><a href="index.html">Home</a></li>
+				 <li><a href="about.html">About</a></li>
+				 <li><a href="team.html">Our Team</a></li>
+				 <li><a href="specials.html">Specials</a></li>
+				 <li><a href="training.html">Training</a></li>
+				 <li><a href="media.html">Media</a></li>
+				 <li><a href="faqs.html">FAQs</a></li>
+				 <li><a href="contact.html">Contact Us</a></li>
+			 </ul>
+		 </nav>
+		 <main   class="container">
+			<h1 class="text-center mt-5">About Shrestha Choppers</h1>
+			<div class="mobile">
+				<div class="grid">
+					<div>
+						<section  class="card">
+							<h2>Our Story</h2>
+							<p>At Shrestha Choppers, we're passionate about revolutionizing the way you prep and cook in the kitchen. With years of expertise in crafting high-quality kitchen appliances, we pride ourselves on delivering innovative solutions that simplify your culinary journey.</p>
+						</section>
+						<section  class="card">
+							<h2>Our Guarantee</h2>
+							<p>At Shrestha Choppers, we stand behind the quality of our products. If you're not completely satisfied with your purchase, simply contact us within 30 days for a full refund. Your satisfaction is our top priority, and we guarantee to make it right. <span class="guarantee">Shop with confidence today!</span></p>
+						</section>
 
-			<main>
-				<h1>About Shrestha Choppers</h1>
-				<div class="mobile">
-                    <section>
-                        <h2>Our Story</h2>
-                        <p>At Shrestha Choppers, we're passionate about revolutionizing the way you prep and cook in the kitchen. With years of expertise in crafting high-quality kitchen appliances, we pride ourselves on delivering innovative solutions that simplify your culinary journey.</p>
-                    </section>
-                    <section>
-                        <h2>Six Reasons Why You Should Shop with Us</h2>
-                        <ol>
-                            <li>Unmatched quality in every product</li>
-                            <li>Innovative designs to simplify your cooking experience</li>
-                            <li>Exceptional customer service and support</li>
-                            <li>Fast and reliable shipping options</li>
-                            <li>Competitive pricing for top-notch products</li>
-                            <li>A commitment to your satisfaction, guaranteed</li>
-                        </ol>
-                    </section>
-                    <section>
-                        <h2>Our Guarantee</h2>
-                        <p>At Shrestha Choppers, we stand behind the quality of our products. If you're not completely satisfied with your purchase, simply contact us within 30 days for a full refund. Your satisfaction is our top priority, and we guarantee to make it right. <span class="guarantee">Shop with confidence today!</span></p>
-                    </section>
-                </div>
-                <div class="tablet"></div>
-                <div class="desktop"></div>
-			</main>
-			<footer>
-				<p>&copy; Copyright 2024. &copy;All Rights Reserved.</p>
-				<p>
-					<a href="mailto:info@shresthachoppers.com"
-						>Request information</a
-					>
-				</p>
-				<p>Arbin Shrestha, Student number: c0932096</p>
-			</footer>
-		</div>
-	</body>
-</html>
+					</div>
+					<section  class="card">
+						<img src="/images/why.png" alt="why icon"/>
+
+						<h2>Six Reasons Why You Should Shop with Us</h2>
+						<ol>
+							<li>Unmatched quality in every product</li>
+							<li>Innovative designs to simplify your cooking experience</li>
+							<li>Exceptional customer service and support</li>
+							<li>Fast and reliable shipping options</li>
+							<li>Competitive pricing for top-notch products</li>
+							<li>A commitment to your satisfaction, guaranteed</li>
+						</ol>
+					</section>
+				</div>
+				
+			</div>
+			<div class="tablet"></div>
+			<div class="desktop"></div>
+		</main>
+		
+		 <footer>
+			 <p>&copy; Copyright 2024. &copy;All Rights Reserved.</p>
+			 <p><a href="mailto:info@shresthachoppers.com">Request information</a></p>
+			 <p>Arbin Shrestha, Student number: c0932096</p>
+		 </footer>
+	 </div>
+	 
+ 
+ 
+ </body>
+ 
+ </html>
