--- a/team.html
+++ b/team.html
@@ -2,6 +2,10 @@
     Student name: Arbin Shrestha
     Student number: c0932096
  -->
+<!-- 
+    Student name: Arbin Shrestha
+    Student number: c0932096
+ -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -11,25 +15,23 @@
 		<title>Our Team | Food Processors</title>
 		<link rel="stylesheet" href="css/styles.css" />
 		<link rel="stylesheet" href="css/team.css" />
-		<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+		<link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
 	</head>
 
 	<body>
-		<div class="container">
+		<div>
 			<header>
+				<!-- taken from: for study purpose only -->
+				<!-- https://images.app.goo.gl/ug5MfrmM4KJzjK2s7 -->
 				<img
-					src="images/banner.png"
+					src="images/banner.jpg"
 					class="banner-image"
 					alt="company banner"
 				/>
 			</header>
+
 			<nav>
-				<a href="index.html"
-					><img
-						src="images/newlogo.png"
-						alt="company logo"
-						class="logo"
-				/></a>
+				<img src="images/logo.png" alt="company logo" class="logo" />
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
@@ -41,53 +43,66 @@
 					<li><a href="contact.html">Contact Us</a></li>
 				</ul>
 			</nav>
-
-			<main>
-				<section>
-					
+			<main class="container">
+				<h1 class="text-center mt-5">Our Team</h1>
+				<section class="card">
 					<div class="grid">
-                        <aside>
-                            <h2>Who We Are</h2>
-                            <p>
-                                At Shrestha Processors, our team is our greatest asset.
-                                From innovative engineers to dynamic sales
-                                representatives, each member plays a vital role in our
-                                journey. We are proud to introduce the faces behind our
-                                success.
-                            </p>
-                        </aside>
+						<aside>
+							<img src="/images/team.png" alt="teams icon"/>
+							<h2>Who We Are</h2>
+							<p>
+								At Shrestha Processors, our team is our greatest
+								asset. From innovative engineers to dynamic
+								sales representatives, each member plays a vital
+								role in our journey. We are proud to introduce
+								the faces behind our success.
+							</p>
+						</aside>
 						<figure>
 							<img
 								src="images/team1.jpg"
 								alt="guitar instructor"
 							/>
-							<figcaption>Jack Williams, CEO</figcaption>
+							<figcaption>
+								<p class="designation">CEO</p>
+								<p class="name">Jack Williams</p>
+							</figcaption>
 						</figure>
 						<figure>
 							<img
 								src="images/team2.jpg"
 								alt="electric guitar instructor"
 							/>
-							<figcaption>Jose Ramirez, Marketing Lead</figcaption>
+							<figcaption>
+								<p class="designation">Marketing Lead</p>
+								<p class="name">Jose Ramirez</p>
+							</figcaption>
 						</figure>
 						<figure>
 							<img
 								src="images/team3.jpg"
 								alt="electric guitar instructor"
 							/>
-							<figcaption>Elisa Petrov, Sales Representative</figcaption>
+							<figcaption>
+								<p class="designation">Sales Representative</p>
+								<p class="name">Elisa Petrov</p>
+							</figcaption>
 						</figure>
 						<figure>
 							<img
 								src="images/team4.jpg"
 								alt="electric guitar instructor"
 							/>
-							<figcaption>Mayak Hill, Associate</figcaption>
+							<figcaption>
+								<p class="designation">Associate</p>
+								<p class="name">Mayak Hill</p>
+							</figcaption>
 						</figure>
 					</div>
 				</section>
-                <section>
-                    <h2>Our Story</h2>
+				<section class="card">
+					<img src="/images/journey.png" alt="story icon"/>
+					<h2>Our Story</h2>
 					<p>
 						Founded in a small garage in 2010, Shrestha Processors
 						has evolved from a humble startup into a global leader
@@ -95,8 +110,9 @@
 						testament to innovation, quality, and the relentless
 						pursuit of excellence.
 					</p>
-                </section>
+				</section>
 			</main>
+
 			<footer>
 				<p>&copy; Copyright 2024. &copy;All Rights Reserved.</p>
 				<p>
