--- a/specials.html
+++ b/specials.html
@@ -32,7 +32,7 @@
 					<li><a href="index.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
 					<li><a href="team.html">Our Team</a></li>
-					<li><a href="specials.html">Specials</a></li>
+					<li><a href="specials.html" class="active">Specials</a></li>
 					<li><a href="training.html">Training</a></li>
 					<li><a href="media.html">Media</a></li>
 					<li><a href="faqs.html">FAQs</a></li>
