--- a/training.html
+++ b/training.html
@@ -33,7 +33,7 @@
 					<li><a href="about.html">About</a></li>
 					<li><a href="team.html">Our Team</a></li>
 					<li><a href="specials.html">Specials</a></li>
-					<li><a href="training.html">Training</a></li>
+					<li><a href="training.html" class="active">Training</a></li>
 					<li><a href="media.html">Media</a></li>
 					<li><a href="faqs.html">FAQs</a></li>
 					<li><a href="contact.html">Contact Us</a></li>
