--- a/specials.html
+++ b/specials.html
@@ -12,13 +12,12 @@
 		<link rel="stylesheet" href="css/styles.css" />
 		<link rel="stylesheet" href="css/specials.css" />
 		<link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	</head>
 
 	<body>
 		<div>
 			<header>
-				<!-- taken from: for study purpose only -->
-				<!-- https://images.app.goo.gl/ug5MfrmM4KJzjK2s7 -->
 				<img
 					src="images/banner.jpg"
 					class="banner-image"
@@ -27,7 +26,15 @@
 			</header>
 
 			<nav>
-				<img src="images/logo.png" alt="company logo" class="logo" />
+				 <div class="ham-flex">
+                    <img src="images/logo.png" alt="company logo" class="logo" />
+                    <div class="menu-toggle"><div class="ham">
+                        &#9776;
+                    </div>
+                    <div class="cross">
+                        &#x274c;
+                    </div></div>
+                </div>
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
@@ -43,10 +50,14 @@
 				<h1 class="text-center mt-5">Specials</h1>
 
 				<div class="product-of-week">
-					<img src="./images/product1.jpg" alt="Product one image" class="hero-product"/>
+					<img
+						src="./images/product1.jpg"
+						alt="Product one image"
+						class="hero-product"
+					/>
 
 					<div class="card">
-						<img src="/images/star.png" alt="star icon"/>
+						<img src="/images/star.png" alt="star icon" />
 
 						<h2>Product of the Week</h2>
 						<h3>
@@ -65,7 +76,6 @@
 							excellence like never before.
 						</p>
 					</div>
-
 				</div>
 
 				<h2>Weekly sales</h2>
@@ -131,5 +141,6 @@
 				<p>Arbin Shrestha, Student number: c0932096</p>
 			</footer>
 		</div>
+		<script src="js/script.js"></script>
 	</body>
 </html>
