--- a/training.html
+++ b/training.html
@@ -26,15 +26,17 @@
 			</header>
 
 			<nav>
-				 <div class="ham-flex">
-                    <img src="images/logo.png" alt="company logo" class="logo" />
-                    <div class="menu-toggle"><div class="ham">
-                        &#9776;
-                    </div>
-                    <div class="cross">
-                        &#x274c;
-                    </div></div>
-                </div>
+				<div class="ham-flex">
+					<img
+						src="images/logo.png"
+						alt="company logo"
+						class="logo"
+					/>
+					<div class="menu-toggle">
+						<div class="ham">&#9776;</div>
+						<div class="cross">&#x274c;</div>
+					</div>
+				</div>
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
