hompage image added

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 			</nav>
 
 			<main class="container">
+				<img src="images/wow.jpg" alt="hero image" class="hero">
 				<h1 class="text-center mt-5">Welcome to Shrestha Choppers</h1>
 				<div class="home-content">
 					<section class="card">
