--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
 					<li><a href="training.html">Training</a></li>
 					<li><a href="media.html">Media</a></li>
 					<li><a href="faqs.html">FAQs</a></li>
-					<li><a href="contact.html">Contact Us</a></li>
+					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
 			<main class="container">
@@ -72,7 +72,7 @@
 									At Shrestha Choppers, we stand behind the
 									quality of our products. If you're not
 									completely satisfied with your purchase,
-									simply contact us within 30 days for a full
+									simply Contact within 30 days for a full
 									refund. Your satisfaction is our top
 									priority, and we guarantee to make it right.
 									<span class="guarantee"
