--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					<li><a href="training.html">Training</a></li>
 					<li><a href="media.html">Media</a></li>
 					<li><a href="faqs.html">FAQs</a></li>
-					<li><a href="contact.html">Contact Us</a></li>
+					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
 
@@ -92,10 +92,10 @@
 				<section class="card home-contact">
 					<img
 						src="/images/contact.png"
-						alt="contact us illustration"
+						alt="Contact illustration"
 					/>
 					<div class="m-auto pr-40">
-						<h2>Contact Us</h2>
+						<h2>Contact</h2>
 						<p>
 							Have a question or want to discuss your project?
 							Feel free to get in touch with us! Our friendly team
@@ -103,7 +103,7 @@
 							need to turn your ideas into reality.
 						</p>
 
-						<a href="contact.html" class="btn">Contact Us</a>
+						<a href="contact.html" class="btn">Contact</a>
 					</div>
 				</section>
 			</main>
