--- a/training.html
+++ b/training.html
@@ -45,7 +45,7 @@
 					<li><a href="training.html" class="active">Training</a></li>
 					<li><a href="media.html">Media</a></li>
 					<li><a href="faqs.html">FAQs</a></li>
-					<li><a href="contact.html">Contact Us</a></li>
+					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
 			<main class="container">
