--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Contact Us | Shrestha Choppers</title>
+		<title>Contact | Shrestha Choppers</title>
 		<link rel="stylesheet" href="css/styles.css" />
 		<link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
 		<link rel="stylesheet" href="css/contact.css" />
@@ -42,13 +42,13 @@
 					<li><a href="media.html">Media</a></li>
 					<li><a href="faqs.html">FAQs</a></li>
 					<li>
-						<a href="contact.html" class="active">Contact Us</a>
+						<a href="contact.html" class="active">Contact</a>
 					</li>
 				</ul>
 			</nav>
 
 			<main class="container">
-				<h1>Contact Us</h1>
+				<h1>Contact</h1>
 				<form onsubmit="alert('Thank you!');">
 					<fieldset>
 						<legend>Contact Form</legend>
