--- a/media.html
+++ b/media.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Contact Us | Shrestha Choppers</title>
+		<title>Contact | Shrestha Choppers</title>
 		<link rel="stylesheet" href="css/styles.css" />
 		<link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
 		<link rel="stylesheet" href="css/media.css" />
@@ -41,7 +41,7 @@
 					<li><a href="training.html">Training</a></li>
 					<li><a href="media.html" class="active">Media</a></li>
 					<li><a href="faqs.html">FAQs</a></li>
-					<li><a href="contact.html">Contact Us</a></li>
+					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
 
